update tasks